style.scss
$reactjs: 80%;
$react-native: 75%;
$android: 70%;
$javascript: 75%;
$typescript: 70%;

html {
  overflow-y: auto;
}

body {
  font-family: "Roboto";
  background-image: url(./assets/mountain-background.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-color: black;
  color: aliceblue;
  overflow: hidden;
}

header {
  display: flex;
  padding: 12px 12px;
  justify-content: center;
  .container {
    display: flex;
    justify-content: space-between;
    width: 60%;
    opacity: 0.7;
    align-items: center;
    .name {
      font-size: 30px;
      & > span {
        color: orange;
        font-size: 41px;
      }
    }
    .options {
      button {
        display: inline-block;
        margin-left: 10px;
        padding: 10px 22px 10px;
        border: none;
        transition: transform 0.3s;
        background-color: transparent;
        color: white;
        cursor: pointer;
        font-size: 16px;
      }
      button:focus-visible,
      button:hover {
        transform: scale(1.2);
      }
    }
    @media screen and (max-width: 1100px) {
      width: 95%;
      .name {
        font-size: 15px;
        & > span {
          color: orange;
          font-size: 20px;
        }
      }
      .options {
        button {
          font-size: 11px;
          padding: 0;
        }
      }
    }
  }
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  .child {
    display: flex;
    flex-direction: column;
    height: 100vh;
    align-items: center;
    justify-content: center;
    text-align: center;
    max-width: 700px;
    line-height: 1.5;
    @media (orientation: portrait) {
      height: auto;
      padding-top: 100px;
      p {
        padding: 0 30px;
      }
    }
    & > p {
      font-size: 21px;
      opacity: 0.7;
    }

    .title {
      font-size: 60px;

      & > span {
        color: orange;
      }
    }
  }
  .section {
    text-align: center;
    width: 60%;
    margin: 65px;
    @media screen and (max-width: 1100px) {
      width: 90%;
      margin-bottom: -50px;
    }
    .title-wrapper {
      display: flex;
      position: relative;
      width: 100%;
      min-height: 100px;
      justify-content: center;
      padding-bottom: 40px;

      .overlay {
        opacity: 0.04;
        font-size: 75px;
        line-height: 0;
      }
      .title {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 18px;
        gap: 8px;
        .type {
          font-size: 22px;
          color: #ffa500;
          margin: 0;
        }
        .divider {
          display: flex;
          height: 3px;
          width: 150px;
          border-radius: 12px;
          background-color: white;
          opacity: 0.4;
          align-items: center;
          overflow: hidden;
          .highlight {
            height: 3px;
            width: 50%;
            background-color: orange;
          }
        }
      }
    }
    .about-container {
      display: flex;
      gap: 60px;
      @media screen and (max-width: 1450px) {
        flex-direction: column;
      }

      img {
        height: auto;
        width: 350px;
        opacity: 1;
        transition: 0.3s;
        -webkit-mask-image: -webkit-gradient(
          linear,
          left top,
          left bottom,
          from(rgba(0, 0, 0, 1)),
          to(rgba(0, 0, 0, 0.05))
        );
        mask-image: linear-gradient(
          to bottom,
          rgba(0, 0, 0, 1),
          rgba(0, 0, 0, 0.05)
        );
        &:hover {
          transform: scale(1.1);
        }
      }
      .details {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        text-align: start;
        gap: 20px;

        .name {
          font-size: 27px;
          opacity: 0.7;
        }
        .designation {
          font-size: 25px;
        }
        .text-small {
          font-size: 17px;
          opacity: 0.5;
          line-height: 24px;
        }
        .field-container {
          display: grid;
          grid-template-columns: 1fr 2fr;
          gap: 40px;
          font-size: 17px;
          & > div {
            display: flex;
            gap: 5px;

            opacity: 0.5;
            &.title {
              opacity: 0.7;
            }
          }
        }
        .fields,
        .values {
          display: flex;
          flex-direction: column;
          gap: 12px;
        }
        .download {
          border: none;
          background-color: orange;
          padding: 10px 25px 10px;
          border-radius: 25px;
          color: black;
          font-size: 15px;
          margin-top: 18px;
          box-shadow: 1px 1px 2px white;
          text-decoration: none !important;
        }
      }
    }
    .skill-container {
      display: flex;
      height: auto;
      width: 100%;
      gap: 80px;
      @media screen and (max-width: 1450px) {
        flex-direction: column;
      }
      & > div {
        flex: 1;
      }

      .info {
        > p {
          line-height: 28px;
          opacity: 0.5;
          text-align: justify;
        }

        .skill-desc {
          font-size: 28px;
          text-align: left;
        }
      }
      .skills {
        display: flex;
        flex-direction: column;
        gap: 40px;
        box-shadow: 2px 10px 20px 5px #080707;
        background-color: black;
        border: #0d0d0d 4px solid;
        padding: 65px;
        transition: transform 0.3s;
        &:hover {
          transform: scale(1.1);
        }
        .skill-item {
          display: flex;
          flex-direction: column;
          gap: 5px;
          transition: transform 0.3s;
          &:hover {
            transform: scale(1.1);
          }
          .percentage {
            display: flex;
            justify-content: space-between;
            .count,
            .name {
              font-size: 18px;
            }
            .name {
              color: white;
            }
            .count {
              color: orange;
            }
          }
          .progressbar {
            display: flex;
            height: 5px;
            background-color: #0d0d0d;
            border-radius: 2px;
            align-items: center;

            .highlight {
              height: 6px;
              width: 20%;
              background-color: orange;
              border-radius: 3px;
              &.reactjs {
                width: $reactjs;
              }
              &.android,
              &.typescript {
                width: $android;
              }
              &.javascript,
              &.react-native {
                width: $javascript;
              }
            }
          }
        }
      }
    }
    .service-container {
      overflow: visible;
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      width: 100%;
      row-gap: 20px;
      column-gap: 20px;
      padding-bottom: 200px;
      & > div {
        background-color: #0d0d0d;
        align-items: center;
        justify-content: center;
        border-radius: 8px;
        padding: 20px;
        font-size: 18px;
        transition: 0.5s;
        &:hover {
          transform: scale(1.1);
          background-color: orange;
          color: #080707;
        }
      }
    }
  }
}

footer {
  position: relative;
  &:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 250px;
    background: url(./assets/wave.svg);
    background-size: cover;
    background-repeat: no-repeat;
  }
}

